SERVER-44657 Reset variable id generator.